--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
     "@types/node": "^18.7.16",
+    "ethers": "^5.7.0",
     "next": "12.2.5",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "web3modal": "^1.9.9"
   },
   "devDependencies": {
     "eslint": "8.23.0",
