--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.10.1",
     "typescript": "^4.8.2",
     "web3modal": "^1.9.9"
   },
