--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "npx hardhat test --network hardhat",
+    "compile": "npx hardhat compile"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/test-helpers": "^0.5.15",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.0",
+    "hardhat": "^2.9.1",
     "@apollo/client": "^3.6.9",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -28,7 +36,10 @@
     "react-player": "^2.10.1",
     "typescript": "^4.8.2",
     "uuid": "^9.0.0",
-    "web3modal": "^1.9.9"
+    "web3modal": "^1.9.9",
+    "@openzeppelin/contracts": "^4.5.0",
+    "dotenv": "^16.0.0",
+    "graphql": "^16.3.0"
   },
   "devDependencies": {
     "eslint": "8.23.0",
