--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
     "jsx": "preserve",
     "baseUrl": "./src"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "test/EmploymentLoan.test.js"
+  ],
   "exclude": ["node_modules"]
 }
