history - loan applications approve

--- a/package.json
+++ b/package.json
@@ -11,35 +11,36 @@
     "compile": "npx hardhat compile"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@openzeppelin/test-helpers": "^0.5.15",
-    "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.0",
-    "hardhat": "^2.9.1",
     "@apollo/client": "^3.6.9",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.5.0",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "@superfluid-finance/ethereum-contracts": "^1.4.0",
     "@superfluid-finance/sdk-core": "^0.5.6",
     "@types/node": "^18.7.16",
     "@worldcoin/id": "^0.8.0",
+    "chai": "^4.3.6",
+    "dotenv": "^16.0.0",
+    "ethereum-waffle": "^3.4.0",
     "ethers": "^5.7.0",
+    "graphql": "^16.3.0",
+    "hardhat": "^2.9.1",
     "ipfs-http-client": "^58.0.0",
     "next": "12.2.5",
     "next-connect": "^0.13.0",
     "omit-deep": "^0.3.0",
+    "querystring": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-player": "^2.10.1",
     "typescript": "^4.8.2",
     "uuid": "^9.0.0",
-    "web3modal": "^1.9.9",
-    "@openzeppelin/contracts": "^4.5.0",
-    "dotenv": "^16.0.0",
-    "graphql": "^16.3.0"
+    "web3modal": "^1.9.9"
   },
   "devDependencies": {
     "eslint": "8.23.0",
