--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ INFURA_ENDPOINT=INFURA_DEDICATED_ENDPOINT
 LOANFACTORY_DEPLOYED_ADDRESS=LOANFACTORY_DEPLOYED_ADDRESS
 SCORING__DEPLOYED_ADDRESS=SCORING__DEPLOYED_ADDRESS
 MUMBAI_URL=INFURA_MUMBAI_RPC
+WORLDID_DEPLOYED=WORLDID_DEPLOYED
+WORLDID_ONCHAIN=WORLDID_ONCHAIN
